css/menu.css
.menu{
	background-color: rgba(32,32,32,0.5);
	border:1px solid;
	border-color: black;
	background-size: auto;
	width:fit-content;
	font-size: 150%;
	position: fixed;
	left:56.5%;
	top:6%;
}
.dropdown-content:hover{
	background-color: rgba(100,100,100,1);
}
a:link{
	color:lightgray;
	text-decoration: none;
}
a:visited{
	color:lightgray;
	text-decoration: none;
}
a:hover{
	text-decoration: underline;
}
a:active{
	text-decoration: underline;
}
h1{
	margin-top:10px;
	margin-bottom:10px;
	font-size:350%;
}
p{
	margin-top:1px;
	margin-bottom:1px;
}
.menu > a{
	color:lightgray;
}
.item{
	background-color: #5c0707dc;
	color: lightgray;
	border: 2px solid black;
	margin: 0px;
	padding: 0px;
	font-size: 30px;
	cursor:default;
}

/*new menu*/

.dropdown-content{
	display: none;
	background-color: rgba(32,32,32,0.5);
	border:1px solid black;
	margin-top: 0px;
	position: absolute;
	min-width: 300px;
}
.dropdown:hover .dropdown-content{
	display: block;
}

